--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header"></header>
-    <main class="main"></main>
-    <footer class="footer"></footer>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__container">
+                <a href="/index.html" class="header__logo">
+                    <img src="./img/logo.svg" alt="logo">                   
+                </a>
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">Store</li>
+                        <li class="menu__item">Collections</li>
+                        <li class="menu__item">Support</li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main class="main">
+            <div class="main__container">
+                <div class="main__content-box content-box">
+                    <div class="content-box__title">Browse top quality <span>Guitars</span> online</div>
+                    <div class="content-box__text">Explore 50k+ latest collections of branded guitars online with Rhythm.</div>
+                    <div class="content-box__download download">
+                        <button class="download__btn btn"></button>
+                        <img src="" alt="" class="download__app">
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">footer</footer>
+    </div>
+
 </body>
 </html>
