--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
         </header>
         <main class="main">
             <div class="main__container">
-                <div class="main__content-box content-box">
-                    <div class="content-box__title">Browse top quality <span>Guitars</span> online</div>
-                    <div class="content-box__text">Explore 50k+ latest collections of branded guitars online with Rhythm.</div>
-                    <div class="content-box__download download">
-                        <button class="download__btn btn"></button>
-                        <img src="" alt="" class="download__app">
+                <section class="main__content-box content-box">
+                    <h1 class="content-box__title">Browse top quality <span>Guitars</span> online</h1>
+                    <p class="content-box__text">Explore 50k+ latest collections of branded guitars online with Rhythm.</p>
+                    <div class="content-box__actions actions">
+                        <a class="actions__btn btn">Get the App</a>
+
+                        <div class="actions__icon">
+                            <img src="./img/Google-play logo.svg" alt="google play">
+                        </div>
+                        <div class="actions__icon">
+                            <img src="./img/Apple logo.svg" alt="apple store">
+                        </div>
                     </div>
-                </div>
+                </section>
             </div>
         </main>
         <footer class="footer">footer</footer>
